--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="main-layout">
-    <header>
+    <header class="header">
         <div class="line"></div>
         <div class="logo">
             <img src="./img/shape-1.png" class="shape-1"></img>
