separating vars and extends

--- a/index.html
+++ b/index.html
@@ -10,29 +10,21 @@
 <body>
 <div class="main-layout">
     <header class="header">
-        <div class="line"></div>
         <div class="logo">
             <img src="./img/shape-1.png" class="shape-1"></img>
             <img src="./img/shape-2.png" class="shape-2"></img>
         </div>
-        <div class="header-login-button">
-            <div class="header-login-bg">
-                <em class="header-login-title">
-                    Login
-                </em>
-            </div>
+        <div class="header-menu">
+            <a class="blog">Blog</a>
+            <a class="pages">Pages</a>
+            <a class="portfolio">Portfolio</a>
+            <a class="home">Home</a>
         </div>
-        <div class="header-sign-in-button">
-            <div class="header-sign-in-bg">
-                <em class="header-sign-in-title">
-                    Sign In
-                </em>
-            </div>
+        <div class="login">
+            <button class="header-login-button">Login</button>
+            <button class="header-sign-in-button">Sign In</button>
         </div>
-        <em class="blog">Blog</em>
-        <em class="pages">Pages</em>
-        <em class="portfolio">Portfolio</em>
-        <em class="home">Home</em>
+        <div class="header-line"></div>
     </header>
     <div class="banner">
         <div class="right-arrow-bg">
