fixed class naming, refactored HTML

--- a/index.html
+++ b/index.html
@@ -10,136 +10,126 @@
 <body>
 <div class="main-layout">
     <header>
-        <div class="line"></div>
         <div class="logo">
             <img src="./img/shape-1.png" class="shape-1"></img>
             <img src="./img/shape-2.png" class="shape-2"></img>
         </div>
-        <div class="header-login-button">
-            <div class="header-login-bg">
-                <em class="header-login-title">
-                    Login
-                </em>
+        <div class="header-links">
+            <a class="blog">Blog</a>
+            <a class="pages">Pages</a>
+            <a class="portfolio">Portfolio</a>
+            <a class="home">Home</a>
+        </div>
+        <div class="login">
+            <div class="header-login-button">
+                <div class="header-login-bg">
+                    <em class="header-login-title">
+                        Login
+                    </em>
+                </div>
+            </div>
+            <div class="header-sign-in-button">
+                <div class="header-sign-in-bg">
+                    <em class="header-sign-in-title">
+                        Sign In
+                    </em>
+                </div>
             </div>
         </div>
-        <div class="header-sign-in-button">
-            <div class="header-sign-in-bg">
-                <em class="header-sign-in-title">
-                    Sign In
-                </em>
-            </div>
-        </div>
-        <em class="blog">Blog</em>
-        <em class="pages">Pages</em>
-        <em class="portfolio">Portfolio</em>
-        <em class="home">Home</em>
+        <div class="line"></div>
     </header>
-    <div class="banner">
-        <div class="right-arrow-bg">
-            <div class="right-arrow"></div>
+    <section class="banner">
+        <div class="section-title">
+            <h2>Freehand your brand with a beautifull website</h2>
         </div>
-        <div class="left-arrow-bg">
-            <div class="left-arrow"></div>
+        <div class="section-description">
+            <p>
+                Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .
+            </p>
         </div>
-        <div class="rectangle-x"></div>
-        <div class="view-projects-in-banner">
-            <a>
-                <em>
-                    View projects
-                </em>
-            </a>
+        <div class="slider-wrapper">
+            <div class="slider"></div>
+            <em class="control prev-img"></em>
+            <em class="control next-img"></em>
         </div>
-        <div class="learn-more-in-banner">
-            <a>
-                <em>
-                    Learn more
-                </em>
-            </a>
+        <div class="button-box">
+            <button class="view-projects">View projects</button>
+            <button class="learn-more">Learn more</button>
         </div>
-        <em class="lorem-ipsum-in-banner">
-            Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .
-        </em>
-        <em class="freehand-your-brand">
-            Freehand your brand with a beautifull website
-        </em>
-    </div>
-    <div class="service">
-        <em class="first-service-title">
+    </section>
+    <section class="service">
+        <em class="pre-section-title">
             Our services
         </em>
-        <em class="main-service-title">
-            We build experience
-        </em>
-        <em class="service-description">
-            Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .
-        </em>
-        <div class="service-group-3">
-            <div class="group-icon">
-                <img src="./img/design-img.png" alt="">
-            </div>
-            <div class="group-header"><em>Design</em></div>
+        <div class="section-title">
+            <h2>We build experience</h2>
+        </div>
+        <div class="section-description">
+            <p> Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .</p>
+        </div>
+        <div class="content-group content-group-1">
+            <img class="group-icon" src="./img/design-img.png" alt="design-img.png">
+            <em class="group-header">Design</em>
             <p class="group-content">
                 Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .
             </p>
-            <a class="group-end">Learn more</a>
+            <a class="learn-more">Learn more</a>
         </div>
-        <div class="service-group-2">
-            <div class="group-icon">
-                <img src="./img/ecommerce-img.png" alt="">
-            </div>
-            <div class="group-header"><em>Ecommerce</em></div>
+        <div class="content-group content-group-2">
+            <img class="group-icon" src="./img/ecommerce-img.png" alt="ecommerce-img.png">
+            <em class="group-header">Ecommerce</em>
             <p class="group-content">
                 Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .
             </p>
-            <a class="group-end">Learn more</a>
+            <a class="learn-more">Learn more</a>
         </div>
-        <div class="service-group-1">
-            <div class="group-icon">
-                <img src="./img/application-img.png" alt="">
-            </div>
-            <div class="group-header"><em>Application</em></div>
+        <div class="content-group content-group-3">
+            <img class="group-icon" src="./img/application-img.png" alt="application-img.png">
+            <em class="group-header">Application</em>
             <p class="group-content">
                 Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .
             </p>
-            <a class="group-end">Learn more</a>
+            <a class="learn-more">Learn more</a>
         </div>
-    </div>
-    <div class="features">
-        <em class="first-features-title">
+    </section>
+    <section class="features">
+        <em class="pre-section-title">
             Our services
         </em>
-        <em class="main-features-title">
-            We build experience
-        </em>
-        <em class="features-description">
-            Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .
-        </em>
-        <div class="img-placeholder-left">
-            <em href="#" class="">
+        <div class="section-title">
+            <h2>We build experience</h2>
+        </div>
+        <div class="section-description">
+            <p>Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .</p>
+        </div>
+        <div class="img-placeholder">
+            <img class="experience-1" src="" alt="">
+            <em class="comment-img">
                 120 million curious readers and growing.
             </em>
         </div>
-        <div class="img-placeholder-right">
-            <em href="#" class="">
+        <div class="img-placeholder">
+            <img class="experience-2" src="" alt="">
+            <em class="comment-img">
                 Expand your reading.
                 Expand your mind.
             </em>
         </div>
-    </div>
-    <div class="price-plan">
-        <em class="main-prices-title">
-            Choose the plan that’s right for your business
-        </em>
-        <em class="prices-description">
-            Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .
-        </em>
+    </section>
+    <section class="price">
+        <div class="section-title">
+            <h2>Choose the plan that’s right for your business</h2>
+        </div>
+        <div class="section-description">
+            <p>Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .</p>
+        </div>
         <div class="started-plan started-plan-first">
             <div class="thick-line"></div>
             <em class="plan-name">Started plan</em>
             <em class="plan-cost">Free</em>
             <em class="plan-periodicity">per month</em>
             <em class="plan-description">Lorem ipsum dolor sit amet, coectetur adipiscing elit. </em>
-            <input class="button-get-started" type="button" value="Get started">
+            <button class="button-get-started" type="button" value="">Get started</button>
         </div>
         <div class="started-plan started-plan-second">
             <div class="thick-line"></div>
@@ -147,7 +137,7 @@
             <em class="plan-cost">$20</em>
             <em class="plan-periodicity">per month</em>
             <em class="plan-description">Lorem ipsum dolor sit amet, coectetur adipiscing elit. </em>
-            <input class="button-get-started" type="button" value="Get started">
+            <button class="button-get-started" type="button" value="">Get started</button>
         </div>
         <div class="started-plan started-plan-third">
             <div class="thick-line"></div>
@@ -155,19 +145,21 @@
             <em class="plan-cost">$50</em>
             <em class="plan-periodicity">per month</em>
             <em class="plan-description">Lorem ipsum dolor sit amet, coectetur adipiscing elit. </em>
-            <input class="button-get-started" type="button" value="Get Started">
+            <button class="button-get-started" type="button" value="">Get Started</button>
         </div>
-    </div>
-    <div class="ada">
-        <em class="main-ada-title">
-            Get started today and try 30 days free
-        </em>
-        <em class="ada-description">
-            No contact, no set-up costs, just awesome way to organise your money.
-        </em>
-        <button type="button" class="button-try" value="">Try if fro free</button>
-        <button type="button" class="button-watch-demo" value="">Watch Demo</button>
-    </div>
+    </section>
+    <section class="free">
+        <div class="section-title">
+            <h2>Get started today and try 30 days free</h2>
+        </div>
+        <div class="section-description">
+            <p>No contact, no set-up costs, just awesome way to organise your money.</p>
+        </div>
+        <div class="button-box">
+            <button class="button-try" type="button" value="">Try if fro free</button>
+            <button class="button-watch-demo" type="button" value="">Watch Demo</button>
+        </div>
+    </section>
     <footer class="footer">
         <div class="general-info">
             <div class="logo">
@@ -188,30 +180,30 @@
         <div class="services">
             <em>Services</em>
             <ul>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Partner with freehand</a></li>
-                <li><a href="">Apps & Plugins</a></li>
-                <li><a href="">FAQ</a></li>
-                <li><a href="">UI Kit</a></li>
+                <li><a class="company-services" href="">Blog</a></li>
+                <li><a class="company-services" href="">Partner with freehand</a></li>
+                <li><a class="company-services" href="">Apps & Plugins</a></li>
+                <li><a class="company-services" href="">FAQ</a></li>
+                <li><a class="company-services" href="">UI Kit</a></li>
             </ul>
         </div>
         <div class="company">
             <em>Company</em>
             <ul>
-                <li><a href="">About</a></li>
-                <li><a href="">Terms</a></li>
-                <li><a href="">Privacy Policy</a></li>
-                <li><a href="">Careers</a></li>
+                <li><a class="about-company" href="">About</a></li>
+                <li><a class="about-company" href="">Terms</a></li>
+                <li><a class="about-company" href="">Privacy Policy</a></li>
+                <li><a class="about-company" href="">Careers</a></li>
             </ul>
         </div>
         <div class="contacts">
             <em>CONTACT US</em>
             <ul>
-                <li><a href="">We’re Always Happy to Help</a></li>
-                <li><a class="email-address" href="">mail@freehand.io</a></li>
+                <li><a class="company-contact" href="">We’re Always Happy to Help</a></li>
+                <li><a class="company-contact email-address" href="">mail@freehand.io</a></li>
                 <li>
-                    <a href=""><img src="./img/foo-contact-1.png" alt="O"></a>
-                    <a href=""><img src="./img/foo-contact-2.png" alt="O"></a>
+                    <a class="company-contact" href=""><img src="./img/foo-contact-1.png" alt="O"></a>
+                    <a class="company-contact" href=""><img src="./img/foo-contact-2.png" alt="O"></a>
                 </li>
             </ul>
         </div>
