--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="main-layout">
-    <header>
+    <header class="header">
         <div class="logo">
             <img src="./img/shape-1.png" class="shape-1"></img>
             <img src="./img/shape-2.png" class="shape-2"></img>
@@ -102,14 +102,14 @@
         <div class="section-description">
             <p>Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .</p>
         </div>
-        <div class="img-placeholder">
-            <img class="experience-1" src="" alt="">
+        <div class="img-placeholder-1">
+            <img class="experience" src="" alt="">
             <em class="comment-img">
                 120 million curious readers and growing.
             </em>
         </div>
-        <div class="img-placeholder">
-            <img class="experience-2" src="" alt="">
+        <div class="img-placeholder-2">
+            <img class="experience" src="" alt="">
             <em class="comment-img">
                 Expand your reading.
                 Expand your mind.
