--- a/index.html
+++ b/index.html
@@ -11,30 +11,18 @@
 <div class="main-layout">
     <header class="header">
         <div class="logo">
-            <img src="./img/shape-1.png" class="shape-1"></img>
-            <img src="./img/shape-2.png" class="shape-2"></img>
+            <img class="logo-img" src="./img/shape-1.png" class="shape-1"></img>
+            <img class="logo-img" src="./img/shape-2.png" class="shape-2"></img>
         </div>
-        <div class="header-links">
-            <a class="blog">Blog</a>
-            <a class="pages">Pages</a>
-            <a class="portfolio">Portfolio</a>
-            <a class="home">Home</a>
+        <div class="header-link-box">
+            <a class="header-link blog">Blog</a>
+            <a class="header-link pages">Pages</a>
+            <a class="header-link portfolio">Portfolio</a>
+            <a class="header-link home">Home</a>
         </div>
         <div class="login">
-            <div class="header-login-button">
-                <div class="header-login-bg">
-                    <em class="header-login-title">
-                        Login
-                    </em>
-                </div>
-            </div>
-            <div class="header-sign-in-button">
-                <div class="header-sign-in-bg">
-                    <em class="header-sign-in-title">
-                        Sign In
-                    </em>
-                </div>
-            </div>
+            <button class="login-btn log-in" type="button" >Login</button>
+            <button class="login-btn sign-in" type="button" >Sign In</button>
         </div>
         <div class="line"></div>
     </header>
