banner 566px+ ready

--- a/index.html
+++ b/index.html
@@ -36,9 +36,14 @@
             </p>
         </div>
         <div class="slider-wrapper">
-            <div class="slider"></div>
-            <em class="control prev-img"></em>
-            <em class="control next-img"></em>
+            <div class="slider">
+                <img src="./img/rectangle-x.png" alt="Not found">
+<!--                <img src="" alt="Not found">-->
+<!--                <img src="" alt="Not found">-->
+<!--                <img src="" alt="Not found">-->
+            </div>
+            <div class="control prev-img"></div>
+            <div class="control next-img"></div>
         </div>
         <div class="button-box">
             <button class="view-projects">View projects</button>
