--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <a class="header-link home">Home</a>
         </div>
         <div class="login">
-            <button class="login-btn log-in" type="button" >Login</button>
-            <button class="login-btn sign-in" type="button" >Sign In</button>
+            <button class="login-btn log-in" type="button">Login</button>
+            <button class="login-btn sign-in" type="button">Sign In</button>
         </div>
         <div class="line"></div>
     </header>
@@ -38,9 +38,9 @@
         <div class="slider-wrapper">
             <div class="slider">
                 <img src="./img/rectangle-x.png" alt="Not found">
-<!--                <img src="" alt="Not found">-->
-<!--                <img src="" alt="Not found">-->
-<!--                <img src="" alt="Not found">-->
+                <!--                <img src="" alt="Not found">-->
+                <!--                <img src="" alt="Not found">-->
+                <!--                <img src="" alt="Not found">-->
             </div>
             <div class="control prev-img"></div>
             <div class="control next-img"></div>
@@ -95,18 +95,22 @@
         <div class="section-description">
             <p>Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .</p>
         </div>
-        <div class="img-placeholder-1">
-            <img class="experience" src="" alt="">
-            <em class="comment-img">
-                120 million curious readers and growing.
-            </em>
-        </div>
-        <div class="img-placeholder-2">
-            <img class="experience" src="" alt="">
-            <em class="comment-img">
-                Expand your reading.
-                Expand your mind.
-            </em>
+        <div class="img-placeholder">
+            <div class="card">
+                <img class="features-image" src="./img/features-img-1.png" alt="">
+
+                <em class="comment-img">
+                    120 million curious readers and growing.
+                </em>
+            </div>
+            <div class="card">
+                <img class="features-image" src="./img/features-img-2.png" alt="">
+
+                <em class="comment-img">
+                    Expand your reading.
+                    Expand your mind.
+                </em>
+            </div>
         </div>
     </section>
     <section class="price">
@@ -116,29 +120,31 @@
         <div class="section-description">
             <p>Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .</p>
         </div>
-        <div class="started-plan started-plan-first">
-            <div class="thick-line"></div>
-            <em class="plan-name">Started plan</em>
-            <em class="plan-cost">Free</em>
-            <em class="plan-periodicity">per month</em>
-            <em class="plan-description">Lorem ipsum dolor sit amet, coectetur adipiscing elit. </em>
-            <button class="button-get-started" type="button" value="">Get started</button>
-        </div>
-        <div class="started-plan started-plan-second">
-            <div class="thick-line"></div>
-            <em class="plan-name">Started plan</em>
-            <em class="plan-cost">$20</em>
-            <em class="plan-periodicity">per month</em>
-            <em class="plan-description">Lorem ipsum dolor sit amet, coectetur adipiscing elit. </em>
-            <button class="button-get-started" type="button" value="">Get started</button>
-        </div>
-        <div class="started-plan started-plan-third">
-            <div class="thick-line"></div>
-            <em class="plan-name">Started plan</em>
-            <em class="plan-cost">$50</em>
-            <em class="plan-periodicity">per month</em>
-            <em class="plan-description">Lorem ipsum dolor sit amet, coectetur adipiscing elit. </em>
-            <button class="button-get-started" type="button" value="">Get Started</button>
+        <div class="price-layout">
+            <div class="started-plan started-plan-first">
+                <div class="thick-line"></div>
+                <em class="plan-name">Started plan</em>
+                <em class="plan-cost">Free</em>
+                <em class="plan-periodicity">per month</em>
+                <em class="plan-description">Lorem ipsum dolor sit amet, coectetur adipiscing elit. </em>
+                <button class="button-get-started" type="button" value="">Get started</button>
+            </div>
+            <div class="started-plan started-plan-second">
+                <div class="thick-line"></div>
+                <em class="plan-name">Started plan</em>
+                <em class="plan-cost">$20</em>
+                <em class="plan-periodicity">per month</em>
+                <em class="plan-description">Lorem ipsum dolor sit amet, coectetur adipiscing elit. </em>
+                <button class="button-get-started" type="button" value="">Get started</button>
+            </div>
+            <div class="started-plan started-plan-third">
+                <div class="thick-line"></div>
+                <em class="plan-name">Started plan</em>
+                <em class="plan-cost">$50</em>
+                <em class="plan-periodicity">per month</em>
+                <em class="plan-description">Lorem ipsum dolor sit amet, coectetur adipiscing elit. </em>
+                <button class="button-get-started" type="button" value="">Get Started</button>
+            </div>
         </div>
     </section>
     <section class="free">
