--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </ul>
         </div>
         <div class="copyright">
-            <em>Copyright © 2020. Crafted with love.</em>
+            <em class="copyright-text">Copyright © 2020. Crafted with love.</em>
         </div>
     </footer>
 </div>
